--- a/src/vs/workbench/browser/media/part.css
+++ b/src/vs/workbench/browser/media/part.css
@@ -31,7 +31,15 @@
 	display: flex;
 	box-sizing:	border-box;
 	overflow: hidden;
+}
+
+.vs .monaco-workbench > .part > .title,
+.vs .monaco-workbench > .part.editor > .content > .one-editor-silo > .container > .title {
 	border-bottom: 1px solid rgba(0, 0, 0, 0.045);
+}
+
+.vs .monaco-workbench > .sidebar > .title {
+	border-bottom: 1px solid #dcdcdc;
 }
 
 .monaco-workbench > .part > .title,
